# shop-list-telegram-bot

./: .gitignore  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  shop-list.db  supervisord.conf
sources/: main.py
sources/db/: db.py
sources/db/models/: Base.py  Item.py  List.py  Record.py  User.py  UserList.py  __init__.py
sources/models/: Base.py  Item.py  List.py  User.py  db.py  models.py
sources/telegram_bot/: bot_exceptions.py  bot_init.py  config.py
sources/telegram_bot/handlers/: commands.py
