[tool.poetry]
name = "shop-list-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Mikhail Zotochev <mikhail@digitalcube.rs>"]

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.15.0"
aiogram = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
